--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,7 @@ RAZORPAY_KEY_SECRET=Bpvb1i4fr8Uji48zVXx7I1Ew
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=SecurePass123!
 
+CLOUDINARY_NAME =drdykxyxy
+CLOUDINARY_API_KEY =521788576477494
+CLOUDINARY_SECRET_KEY =3XYYL3YQj7Ai7NkDj48Zu-zvmnk
+
